add ingested intervals to task report